# diamond-pickaxe

./: .gitignore  Cargo.toml  README.md
agg-p13/: Cargo.toml
agg-p13/src/: main.rs
agg-p20/: Cargo.toml
agg-p20/src/: main.rs
agg-p27/: Cargo.toml
agg-p27/src/: main.rs
agg-p33/: Cargo.toml
agg-p33/src/: main.rs
agg-p34/: Cargo.toml
agg-p34/src/: main.rs
agg-p37/: Cargo.toml
agg-p37/src/: main.rs
agg-p41/: Cargo.toml
agg-p41/src/: main.rs
agg-p46/: Cargo.toml
agg-p46/src/: main.rs
agg-p48/: Cargo.toml
agg-p48/src/: main.rs
agg-p56/: Cargo.toml
agg-p56/src/: main.rs
agg-p56/src/footer/: index.rs
agg-p56/src/header/: index.rs
agg-p56/src/item/: index.css  index.rs
agg-p56/src/list/: index.rs
agg-p6/: Cargo.toml
agg-p6/src/: main.rs
agg-p65/: Cargo.toml
agg-p65/src/: main.rs
agg-p67/: Cargo.toml
agg-p67/src/: lib.rs  main.rs
agg-p67/src/list/: index.rs
agg-p67/src/search/: index.rs
agg-p77/: Cargo.toml
agg-p77/src/: lib.rs  main.rs
agg-p77/src/about/: index.rs
agg-p77/src/home/: detail.rs  index.rs  message.rs  mod.rs  news.rs
agg-p99/: Cargo.toml
agg-p99/src/: lib.rs  main.rs
agg-p99/src/person/: mod.rs
