[workspace]
resolver = "2"
members = [
    "agg-p6",
    "agg-p13",
    "agg-p20",
    "agg-p27",
    ]

[workspace.dependencies]
dioxus = { version = "0.6.0", features = [] }
gloo-dialogs = "0.2.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
