[workspace]
resolver = "2"
members = [
    "agg-p6",
    "agg-p13",
    "agg-p20",
    "agg-p27",
    "agg-p33",
    "agg-p34",
    "agg-p37",
    "agg-p41",
    "agg-p46",
    "agg-p48",
    "agg-p56",
    "agg-p65",
    "agg-p67",
    "agg-p77",
    ]

[workspace.dependencies]
dioxus = { version = "0.6.2", features = [] }
gloo-dialogs = "0.2.0"
async-std = "1.12.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
